{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 9,
  "lineage": "9e643940-8920-f370-99b1-7796f7ba6206",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myEc2Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:863337886032:instance/i-0a213e91134a49cdc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a213e91134a49cdc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0db335ebb3c4ae551",
            "private_dns": "ip-10-0-0-25.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.25",
            "public_ip": "13.126.54.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05082cb6532310c2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dea580a40c2100fd",
            "tags": {
              "Name": "ec2-publicip"
            },
            "tags_all": {
              "Name": "ec2-publicip"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0371b8a8e030baecb"
            ]
          },
          "dependencies": [
            "aws_security_group.mySecureGrp",
            "aws_subnet.publicSubnet1",
            "aws_vpc.myVpc1",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:863337886032:internet-gateway/igw-0da28074cb20e30fb",
            "id": "igw-0da28074cb20e30fb",
            "owner_id": "863337886032",
            "tags": {
              "Name": "myIGW1"
            },
            "tags_all": {
              "Name": "myIGW1"
            },
            "vpc_id": "vpc-09359f8f153ccb6bf"
          },
          "dependencies": [
            "aws_vpc.myVpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myPublicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:863337886032:route-table/rtb-0f09f0820a6548a26",
            "id": "rtb-0f09f0820a6548a26",
            "owner_id": "863337886032",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da28074cb20e30fb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myRoute"
            },
            "tags_all": {
              "Name": "myRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-09359f8f153ccb6bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myIGW1",
            "aws_vpc.myVpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myPublicRouteAssociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0589edef30edb61e1",
            "route_table_id": "rtb-0f09f0820a6548a26",
            "subnet_id": "subnet-0dea580a40c2100fd"
          },
          "dependencies": [
            "aws_internet_gateway.myIGW1",
            "aws_route_table.myPublicRoute",
            "aws_subnet.publicSubnet1",
            "aws_vpc.myVpc1",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySecureGrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:863337886032:security-group/sg-0371b8a8e030baecb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0371b8a8e030baecb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "mySecureGrp",
            "name_prefix": "",
            "owner_id": "863337886032",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mySecureGrp"
            },
            "tags_all": {
              "Name": "mySecureGrp"
            },
            "timeouts": null,
            "vpc_id": "vpc-09359f8f153ccb6bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:863337886032:subnet/subnet-0208db94efdf54901",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0208db94efdf54901",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "863337886032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privateSubnet1"
            },
            "tags_all": {
              "Name": "privateSubnet1"
            },
            "vpc_id": "vpc-09359f8f153ccb6bf"
          },
          "dependencies": [
            "aws_vpc.myVpc1",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:863337886032:subnet/subnet-0dea580a40c2100fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dea580a40c2100fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "863337886032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicSubnet1"
            },
            "tags_all": {
              "Name": "publicSubnet1"
            },
            "vpc_id": "vpc-09359f8f153ccb6bf"
          },
          "dependencies": [
            "aws_vpc.myVpc1",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:863337886032:vpc/vpc-09359f8f153ccb6bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-033d9f7ea9b7524c7",
            "default_route_table_id": "rtb-02f574bc779945d9a",
            "default_security_group_id": "sg-0417821bab240474b",
            "dhcp_options_id": "dopt-029f3d41dd3bab4fe",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09359f8f153ccb6bf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f574bc779945d9a",
            "owner_id": "863337886032"
          }
        }
      ]
    }
  ]
}